# async_singleflight

./: Cargo.toml  README.md
.github/workflows/: cargo-test.yml  rust-test.yml
src/: group.rs  lib.rs  unary.rs
