[package]
name = "async_singleflight"
version = "0.5.3"
authors = ["Pure White <wudi@purewhite.io>"]
edition = "2021"
description = "Async singleflight."
repository = "https://github.com/PureWhiteWu/async_singleflight"
license = "MIT OR Apache-2.0"
keywords = ["singleflight", "async"]
categories = ["asynchronous", "concurrency", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.15"
parking_lot = "0.12"
pin-project = "1"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
