[package]
name = "async_singleflight"
version = "0.6.0"
authors = ["Pure White <wudi@purewhite.io>"]
edition = "2021"
description = "Async singleflight."
repository = "https://github.com/PureWhiteWu/async_singleflight"
license = "MIT OR Apache-2.0"
keywords = ["singleflight", "async"]
categories = ["asynchronous", "concurrency", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
pin-project = "1"
tokio = { version = "1", features = [ "sync" ] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
